# GoldFinanceManagement

./: .gitignore  README.md
backend/: db.js  package-lock.json  package.json  server.js
backend/config/: logger.js  supabaseClient.js
backend/controllers/: accounts.controller.js  admin.controller.js  auth.controller.js  customer.controller.js  dashboard.controller.js  expense.controller.js  goldRate.controller.js  investment.controller.js  karat.controller.js  loan.controller.js  logs.controller.js  machine.controller.js  ornament.controller.js  otp.controller.js  processing.controller.js  scheme.controller.js  user.controller.js  utility.controller.js
backend/logs/: .3738db986156a1e4a38ea034c5a1a99eeb7f56e3-audit.json  .4a1f231faeb1af910072d2e41d2b69dbac334bdc-audit.json  .6c39695001be514183d3224bce86c00da41ae832-audit.json  .8eb2f8e5f3a31852368705c7705bf8a28801dcae-audit.json  .f02c08811c6dcb261890c7333890110987a647fa-audit.json  .fbccd004eaed07e12ceaac6d7b8b21e5930e14ba-audit.json
backend/middleware/: authMiddleware.js  errorHandler.js  roleMiddleware.js  upload.middleware.js
backend/routes/: accounts.routes.js  admin.routes.js  auth.routes.js  customer.routes.js  dashboard.routes.js  expense.routes.js  goldRate.routes.js  investment.routes.js  karat.routes.js  loan.routes.js  logs.routes.js  machine.routes.js  ornament.routes.js  otp.routes.js  processing.routes.js  scheme.routes.js  user.routes.js  utility.routes.js
backend/services/: cleanupSupabaseLogs.service.js  interestUpdate.service.js  penalty.service.js
dump/: version 2 escalation process.txt
goldfinanceapp/: index.html  package-lock.json  package.json  vite.config.ts
goldfinanceapp/src/: App.css  App.tsx  api.ts  main.tsx
goldfinanceapp/src-tauri/: Cargo.toml  tauri.conf.json
goldfinanceapp/src-tauri/icons/: icon.icns
goldfinanceapp/src-tauri/src/: lib.rs  main.rs
goldfinanceapp/src/components/: AccountsPage.tsx  AddCustomerForm.tsx  AddGoldKaratForm.tsx  AddOrnamentForm.tsx  AddSchemeForm.tsx  AlertNotification.tsx  AmountModal.tsx  AuthLayout.tsx  BillPreview.tsx  BillPrintModal.tsx  Breadcrumb.tsx  BulkAmountModal.tsx  ClosedLoans.tsx  ConfirmationDialog.tsx  CreateUserForm.tsx  CustomerDetails.tsx  Dashboard.tsx  DatePicker.tsx  DateTimePicker.tsx  EditSchemeForm.tsx  EditUserModal.tsx  ExpenseManagement.tsx  GoldKaratDetails.tsx  GoldRateDetails.tsx  ImageUploadModal.tsx  ImageViewerModal.tsx  InvestmentModal.tsx  LoanCalculatorWidget.tsx  LoanConfirmationModal.tsx  LoanDetails.tsx  LoanPaymentModal.tsx  NewLoanApplication.tsx  OrnamentDetails.tsx  OrnamentImageViewerModal.tsx  PendingLoans.tsx  (+17 more)
license-checker/: package-lock.json  package.json
license-checker/src/: App.css  App.tsx
license-checker/src-tauri/: Cargo.toml  tauri.conf.json
license-checker/src-tauri/src/: main.rs
machine_collector/: Cargo.toml  ca.pem
machine_collector/src/: main.rs
(+4 files in other folders)
