[package]
name = "goldfinanceapp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "goldfinanceapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6.6", features = ["dialog-save", "fs-write-file"] }
mac_address = "1.1.8"
sysinfo = "0.37.0" 
tokio = { version = "1", features = ["macros"] } # Use macros feature for async main
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
