[package]
name = "goldfinanceapp"
version = "2.0.0"
description = "A gold loan management software build specifically for Maya Gold Finance"
authors = ["you"]
edition = "2021"

[lib]
name = "goldfinanceapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6.6", features = [ "dialog-save", "fs-write-file" , "custom-protocol" ] }
mac_address = "1.1.8"
sysinfo = "0.37.0" 
tokio = { version = "1", features = ["macros"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
